--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@
                     </div>
                     <h3 class="contact-title padd-15">Envoyez moi un mail</h3>
                     <div class="contact-title padd-15" id="Foo">SYTEME D'ENVOI DE MAIL INDISPONIBLE !</div>
-                    <h4 class="contact-sub-title padd-15">MON EQUIPE S'EN CHARGE !</h4>
+                    <h4 class="contact-sub-title padd-15">MON EQUIPE S'EN CHARGE !!</h4>
                     <!-- CONTACT FORM STARTS -->
                     <div class="row">
                         <div class="contact-form padd 15">
