--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MAKOSSO CAMILLE</title>
+    <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
     <!-- CSS FILES -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/skins/color-1.css">
@@ -186,7 +187,7 @@
                                                 <p>Age: <span>44 ans</span></p>
                                             </div>
                                             <div class="info-item padd-15">
-                                                <p>Site web: <span>www.toutsurmakosso.ci</span></p>
+                                                <p>Site web: <span>toutsurmakosso.netlify.app</span></p>
                                             </div>
                                             <div class="info-item padd-15">
                                                 <p>Email: <span>miga_international@yahoo.fr</span></p>
@@ -234,7 +235,7 @@
                                 <div class="icon">
                                     <i class="fa fa-mobile-alt"></i>
                                 </div>
-                                <h4>Pasteur</h4>
+                                <h4>Reverand Pasteur</h4>
                                 <p>Très réputé non seulement pour ses messages peu orthodoxes sur la toile, le révérend Camille Makosso est malgré tout un
                                     homme de Dieu. Cette profession lui confère désormais le poste de Secrétaire Général du Directoire National des Eglises 
                                     Protestantes Evangéliques  de la Côte d'Ivoire. Il s'est démarqué de ses pairs et s'est fait élire Président des pasteurs 
@@ -649,7 +650,7 @@
                         <div class="contact-info-item padd-15">
                             <div class="icon"><i class="fa fa-globe-europe"></i></div>
                             <h4>Site Internet</h4>
-                            <p>www.toutsurmakosso.ci</p>
+                            <p>toutsurmakosso.netlify.app</p>
                         </div>
                         <!-- CONTACT INFO ITEM ENDS -->
                     </div>
