--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                     <div class="container">
                         <div class="row">
                             <div class="home-info padd-15">
+                                <img src="images/logo.png" class="log" alt="">
                                 <h3 class="hello">
                                     Bienvenue sur le site du GENERAL Makosso Camille alias <br> <span class="name">ROI DE LA MARMAILLE</span>
                                 </h3>
@@ -124,8 +125,6 @@
                                         <p>
                                             <strong>IV- &nbsp;&nbsp;</strong>Camille Makosso est le Président de la Commission Protestante Évangélique de Côte d'Ivoire. 
                                             Il a été investi le 29 Décembre 2019. Makosso est à la tête de 85 fédérations et plus de 10.500 pasteurs affiliés.
-
-                                            5
                                         </p>
                                         <p>
                                             <strong>V- &nbsp;&nbsp;</strong>Camille Makosso a stoppé l'école en classe de Seconde. 
@@ -141,11 +140,11 @@
                                             <strong>VII- &nbsp;&nbsp;</strong>Homme de Dieu aux méthodes révolutionnaires, le digital et sa verve acerbe sont ses instruments d'évangélisation, 
                                             dans une époque où le village planétaire est devenu une réalité grâce aux canaux virtuels de communication et où la jeunesse constitue la majorité de la population mondiale. 
                                             Makosso se penche sur les sujets d'actualité, les faits de société, mais aussi les buzz liés au showbiz. Il n'hésite pas déblatérer également sur des sujets comme la sexualité, la vie de couple. 
-                                            Il donne également des cours de marmaille, des stratégies, de développement personnel. “Plus on m'insulte, plus on vient écouter ma réponse dangereuse. (…) Il n'y a que les gensbêtes qui ne me comprennent pas”.
+                                            Il donne également des cours de marmaille, des stratégies, de développement personnel. “Plus on m'insulte, plus on vient écouter ma réponse dangereuse. (…) Il n'y a que les gens bêtes qui ne me comprennent pas”.
                                         </p>
                                         <p>
                                             <strong>VIII- &nbsp;&nbsp;</strong>“750 millions de francs CFA par an”, tel est le chiffre d'affaires qu'il a révélé lors 
-                                            de l'un de ses derniers directs sur sa page Facebook.
+                                            de l'un de ses derniers sur sa page Facebook.
                                         </p>
                                         <p>
                                             <strong>IX- &nbsp;&nbsp;</strong>“J'ai rencontré ma femme à l'église évangélique Antioche en 2001 à Abidjan. C'était la plus jolie femme de l'église
@@ -207,7 +206,7 @@
                                         </div>
                                         <div class="row">
                                             <div class="buttons padd-15">
-                                                <a href="#" class="btn">BIOGRAPHIE</a>
+                                                <a href="#about" class="btn">BIOGRAPHIE</a>
                                                 <a href="#contact" class="btn meet-me">RENCONTREZ MOI</a>
                                             </div>
                                         </div>
@@ -242,7 +241,7 @@
                                     de la Cote d'Ivoire. Les églises; c'est le véritable business que mènent les africains au 21eme siècle. 
                                     Une activité à laquelle ils font recours avec son lot de gagnants et de personnes bernées. Les hommes de Dieu à 
                                     la tête de ces différentes activités n'en ont souvent que pour leurs poches ce qui n'est pas le cas du General Makosso qui affirme que
-                                    Les offrandes des fidèles vont chez les veuves et les orphelins
+                                    "Les offrandes des fidèles vont chez les veuves et les orphelins".
                                 </p>
                             </div>
                         </div>
@@ -258,7 +257,7 @@
                                     Pasteur certes, Camille Makosso se veut aussi comme influenceur. En effet, ayant une grande influence
                                     sur les reseaux sociaux ou même dans la vraie vie, Camille Makosso arrive à créer à la perfection du contenu
                                     pour ses followers et utilise sa plateforme pour promouvoir des produits, des services ou des idées. Dû à son affluence,
-                                    il aide egalement les marques à améliorer leur notoriété de marque et à augmenter leur engagement avec leur public cible.
+                                    il aide egalement les marques à améliorer leur notoriété et à augmenter leur engagement avec leur public cible.
                                     Assez recurrent sur les réseaux sociaux avec pas mal de direct sur sa page Facebook, Le Generel Camille Makosso n'hésite pas 
                                     à booster les jeunes entrepreneurs à se lancer dans leur business. Apportant différentes et bonnes stratégies, il participe aussi
                                     au financement des projets des jeunes qui ont envie de réussir.
@@ -276,7 +275,7 @@
                                 <p>
                                     Le révérend Camille Makosso est devenu, en quatre ans, l'une des voix les plus fortes du monde évangélique dans son pays, 
                                     la Côte d'Ivoire. Nous avons eu le privilège de côtoyer cet homme animé d'une vision profonde. C'est une personne influente. 
-                                    Il est impossible de l'écouter sans être impacté et révolté par rapport à votre condition de vie. A cours de sa carrière, Le Général Makosso
+                                    Il est impossible de l'écouter sans être impacté et révolté par rapport à votre condition de vie. Au cours de sa carrière, Le Général Makosso
                                     a ecrit des livres à hauts succès dont on peut citer: LES SECRETS DE LA REUSSITE: L'ECOLE DE LA MARMAILLE 1 paru en 2019, et LES 
                                     SECRETS DE LA REUSSITE: L'ECOLE DE LA MARMAILLE 2 paru quant à lui en 2020. Ces deux livres vendus actuellement sur Amazon aux prix 
                                     de 21.02€ et 22.71€ respectivement sont un véritable succès de par leurs nombres de vente sur la toile.
@@ -295,7 +294,7 @@
                                     Le Roi de la marmaille est pluridimensionnel. Il vend aussi des vehicules. Camille Makosso détient à son actif une entreprise
                                     de vente de véhicules. En effet, Les entreprises de vente de véhicules peuvent également offrir des services tels que l'entretien, 
                                     la réparation, la location et le financement des véhicules. Certaines entreprises peuvent aussi offrir des achats en ligne ou des 
-                                    livraisons à domicile. Besoin de véhicules neufs ou d'occasion ? N'hésitez pas à contacter les serives de ventes de véhicules du 
+                                    livraisons à domicile. Besoin de véhicules neufs ou d'occasion ? N'hésitez pas à contacter les services de ventes de véhicules du 
                                     GENERAL Camille Makosso.
                                 </p>
                             </div>
@@ -655,7 +654,7 @@
                         <!-- CONTACT INFO ITEM ENDS -->
                     </div>
                     <h3 class="contact-title padd-15">Envoyez moi un mail</h3>
-                    <div class="contact-title padd-15" id="Foo">SYTEME D'ENVOI DE MAIL INDISPONIBLE !</div>
+                    <div class="contact-title padd-15" id="Foo">SYSTEME D'ENVOI DE MAIL INDISPONIBLE !</div>
                     <h4 class="contact-sub-title padd-15">MON EQUIPE S'EN CHARGE !!</h4>
                     <!-- CONTACT FORM STARTS -->
                     <div class="row">
