--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/skins/color-1.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"/>
     <!-- Style switcher -->
     <link rel="stylesheet" href="css/style-switcher.css">
     <link rel="stylesheet" href="css/skins/color-1.css" class="alternate-style" title="color-1" disabled>
@@ -38,6 +42,7 @@
                 <li><a href="#service"><i class="fa fa-list"></i>Services</a></li>
                 <li><a href="#galerie"><i class="fa fa-briefcase"></i>Galerie</a></li>
                 <li><a href="#contact"><i class="fa fa-comments"></i>Contactez moi</a></li>
+                <li><a href="#social"><i class="fas fa-hashtag"></i>Réseaux Sociaux</a></li>
             </ul>
         </div>
         <!-- ASIDE NAV BAR ENDS -->
@@ -628,7 +633,7 @@
                         <div class="contact-info-item padd-15">
                             <div class="icon"><i class="fa fa-phone"></i></div>
                             <h4>Appelez-nous Au</h4>
-                            <p>+33 7 60 15 07 50</p>
+                            <p>+225 0709509359</p>
                         </div>
                         <!-- CONTACT INFO ITEM ENDS -->
                         <!-- CONTACT INFO ITEM STARTS -->
@@ -696,6 +701,23 @@
                 </div>
             </section>
             <!-- CONTACT SECTION ENDS -->
+
+            <!-- SOCIAL MEDIA STARTS -->
+            <section class="social section" id="social">
+                <div class="container">
+                    <div class="row">
+                        <div class="section-title padd 15">
+                            <h2>Suivez moi sur :</h2>
+                        </div>
+                    </div>
+                    <div class="media">
+                        <a href="https://www.facebook.com/Generalcamillemakosso" target="_blank"><i class="fab fa-facebook"></i></a>
+                        <a href="https://www.instagram.com/generalcamillemakosso/" target="_blank"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.tiktok.com/@camillemakosso225" target="_blank"><i class="fab fa-tiktok"></i></a>
+                    </div>
+                </div>
+            </section>
+            <!-- SOCIAL MEDIA STARTS -->
         </div>
         <!-- MAIN CONTENT ENDS -->
 
@@ -721,6 +743,8 @@
         </div>
     </div>
     <!-- STYLE SWICHER STARTS -->
+
+    
 
     <!-- JS FILES -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js" referrerpolicy="no-referrer"></script>
