--- a/index.html
+++ b/index.html
@@ -713,7 +713,7 @@
                     <div class="media">
                         <a href="https://www.facebook.com/Generalcamillemakosso" target="_blank"><i class="fab fa-facebook"></i></a>
                         <a href="https://www.instagram.com/generalcamillemakosso/" target="_blank"><i class="fab fa-instagram"></i></a>
-                        <a href="https://www.tiktok.com/@camillemakosso225" target="_blank"><i class="fab fa-tiktok"></i></a>
+                        <a href="https://www.tiktok.com/@generalmakossocamille1" target="_blank"><i class="fab fa-tiktok"></i></a>
                     </div>
                 </div>
             </section>
