--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/skins/color-1.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"/>
     <!-- Style switcher -->
@@ -237,7 +237,7 @@
                         <div class="service-item padd-15">
                             <div class="service-item-inner">
                                 <div class="icon">
-                                    <i class="fa fa-mobile-alt"></i>
+                                    <i class="fas fa-mobile"></i>
                                 </div>
                                 <h4>Reverand Pasteur</h4>
                                 <p>Très réputé non seulement pour ses messages peu orthodoxes sur la toile, le révérend Camille Makosso est malgré tout un
@@ -255,7 +255,7 @@
                         <div class="service-item padd-15">
                             <div class="service-item-inner">
                                 <div class="icon">
-                                    <i class="fa fa-laptop-code"></i>
+                                    <i class="fas fa-voicemail"></i>
                                 </div>
                                 <h4>Influenceur</h4>
                                 <p>
@@ -274,7 +274,7 @@
                         <div class="service-item padd-15">
                             <div class="service-item-inner">
                                 <div class="icon">
-                                    <i class="fa fa-palette"></i>
+                                    <i class="fas fa-user-edit"></i>
                                 </div>
                                 <h4>Ecrivain</h4>
                                 <p>
@@ -638,7 +638,7 @@
                         <!-- CONTACT INFO ITEM ENDS -->
                         <!-- CONTACT INFO ITEM STARTS -->
                         <div class="contact-info-item padd-15">
-                            <div class="icon"><i class="fa fa-map-marker-alt"></i></div>
+                            <div class="icon"><i class="fas fa-desktop"></i></div>
                             <h4>Bureau</h4>
                             <p>Chez moi à la maison</p>
                         </div>
@@ -652,7 +652,7 @@
                         <!-- CONTACT INFO ITEM ENDS -->
                         <!-- CONTACT INFO ITEM STARTS -->
                         <div class="contact-info-item padd-15">
-                            <div class="icon"><i class="fa fa-globe-europe"></i></div>
+                            <div class="icon"><i class="fas fa-globe-europe"></i></div>
                             <h4>Site Internet</h4>
                             <p>toutsurmakosso.netlify.app</p>
                         </div>
