--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MAKOSSO CAMILLE</title>
     <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
+
     <!-- CSS FILES -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/skins/color-1.css">
@@ -14,6 +15,7 @@
     <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"/>
+    
     <!-- Style switcher -->
     <link rel="stylesheet" href="css/style-switcher.css">
     <link rel="stylesheet" href="css/skins/color-1.css" class="alternate-style" title="color-1" disabled>
@@ -608,6 +610,73 @@
                             <div class="galerie-item-inner shadow dark">
                                 <div class="galerie-img">
                                     <img src="images/assis.jpg" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <!-- GALERIE ITEM ENDS -->
+                        <!-- GALERIE ITEM START -->
+                        <div class="galerie-item padd 15">
+                            <div class="galerie-item-inner shadow dark">
+                                <div class="galerie-img">
+                                    <iframe width="100%" height="400px" src="https://www.youtube.com/embed/RpKVltm2aZQ" 
+                                    title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                                    allowfullscreen></iframe>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- GALERIE ITEM ENDS -->
+                        <!-- GALERIE ITEM START -->
+                        <div class="galerie-item padd 15">
+                            <div class="galerie-item-inner shadow dark">
+                                <div class="galerie-img">
+                                    <iframe width="100%" height="400px" 
+                                    src="https://www.youtube.com/embed/N0nUW9OAVUk" title="YouTube video player" 
+                                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                                    allowfullscreen></iframe>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- GALERIE ITEM ENDS -->
+                        <!-- GALERIE ITEM START -->
+                        <div class="galerie-item padd 15">
+                            <div class="galerie-item-inner shadow dark">
+                                <div class="galerie-img">
+                                    <iframe width="100%" height="400px" src="https://www.youtube.com/embed/FPoUBqsTafY" 
+                                    title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                                    allowfullscreen></iframe>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- GALERIE ITEM ENDS -->
+                        <!-- GALERIE ITEM START -->
+                        <div class="galerie-item padd 15">
+                            <div class="galerie-item-inner shadow dark">
+                                <div class="galerie-img">
+                                    <iframe width="100%" height="400px" src="https://www.youtube.com/embed/7do94TzX75I" 
+                                    title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                                    allowfullscreen></iframe>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- GALERIE ITEM ENDS -->
+                        <!-- GALERIE ITEM START -->
+                        <div class="galerie-item padd 15">
+                            <div class="galerie-item-inner shadow dark">
+                                <div class="galerie-img">
+                                    <iframe width="100%" height="400px" src="https://www.youtube.com/embed/9RBcWnXce90" 
+                                    title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                                    allowfullscreen></iframe>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- GALERIE ITEM ENDS -->
+                        <!-- GALERIE ITEM START -->
+                        <div class="galerie-item padd 15">
+                            <div class="galerie-item-inner shadow dark">
+                                <div class="galerie-img">
+                                    <iframe width="100%" height="400px" src="https://www.youtube.com/embed/LHIJV_7redQ" 
+                                    title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                                    allowfullscreen></iframe>
                                 </div>
                             </div>
                         </div>
