--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MAKOSSO CAMILLE</title>
-    <link rel="shortcut icon" href="images/Capture d’écran (4)_prev_ui.png" type="image/x-icon">
+    <title>Camille Makosso - Bienvenue sur le site officiel du Général</title>
+    <link rel="shortcut icon" href="images/Capture d’écran (5)_prev_ui.png" type="image/x-icon">
 
     <!-- CSS FILES -->
     <link rel="stylesheet" href="css/style.css">
