--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                             <div class="home-info padd-15">
                                 <img src="images/logo.png" class="log" alt="">
                                 <h3 class="hello reveal">
-                                    Bienvenue sur le site du GENERAL Makosso Camille alias <br> <span class="name">ROI DE LA MARMAILLE</span>
+                                    Bienvenue dans l'univers captivant du GENERAL Makosso Camille alias <br> <span class="name">ROI DE LA MARMAILLE</span>
                                 </h3>
                                 <h3 class="my-profession reveal">
                                     Je suis votre <span class="typing">Pasteur</span>
@@ -229,7 +229,7 @@
                                                 <p>Age: <span>44 ans</span></p>
                                             </div>
                                             <div class="info-item padd-15">
-                                                <p>Site web: <span>toutsurmakosso.netlify.app</span></p>
+                                                <p>Site web: <span>camillemakosso.netlify.app</span></p>
                                             </div>
                                             <div class="info-item padd-15">
                                                 <p>Email: <span>miga_international@yahoo.fr</span></p>
@@ -859,7 +859,7 @@
                         <div class="contact-info-item padd-15 reveal">
                             <div class="icon"><i class="fas fa-globe-europe"></i></div>
                             <h4>Site Internet</h4>
-                            <p>toutsurmakosso.netlify.app</p>
+                            <p>camillemakosso.netlify.app</p>
                         </div>
                         <!-- CONTACT INFO ITEM ENDS -->
                     </div>
@@ -977,7 +977,7 @@
                                         <p class="descriptions">ABONNEZ-VOUS, RESTEZ CONNECTÉS et SUIVEZ MES RÉCENTES ACTIVITÉS sur mon compte Tiktok</p>
                                         
 
-                                        <a href="tiktok.com/@generalmakossocamille1" target="_blank">
+                                        <a href="https://www.tiktok.com/@generalmakossocamille1" target="_blank">
                                             <button class="buutton">
                                                 VOIR LA PAGE TIKTOK
                                             </button>
@@ -990,6 +990,12 @@
                 </div>
             </section>
             <!-- SOCIAL MEDIA STARTS -->
+
+            <!-- FOOTER STARTS -->
+            <footer>
+                <p>2023 &copy; COPYRIGHTS CAMILLEMAKOSSO.NETLIFY.APP - TOUS DROITS RESERVES</p>
+            </footer>
+            <!-- FOOTER ENDS -->
         </div>
         <!-- MAIN CONTENT ENDS -->
 
