--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Camille Makosso - Bienvenue sur le site officiel du Général</title>
-    <link rel="shortcut icon" href="images/Capture d’écran (5)_prev_ui.png" type="image/x-icon">
+    <title>Général Makosso Camille - Bienvenue sur le site officiel du Général</title>
+    <link rel="shortcut icon" href="images/gmc2_prev_ui.png" type="image/x-icon">
 
     <!-- CSS FILES -->
     <link rel="stylesheet" href="css/style.css">
@@ -36,7 +36,7 @@
         <!-- ASIDE NAV BAR -->
         <div class="aside reveal">
             <div class="logo reveal">
-                <a href="#"><span>M</span>akosso</a>
+                <a href="#"><span>G</span>ENERAL<span>M</span>akosso</a>
             </div>
             <div class="nav-toggler">
                 <span></span>
@@ -48,6 +48,7 @@
                 <li><a href="#galerie"><i class="fa fa-briefcase"></i>Galerie</a></li>
                 <li><a href="#contact"><i class="fa fa-comments"></i>Contactez moi</a></li>
                 <li><a href="#social"><i class="fas fa-hashtag"></i>Réseaux Sociaux</a></li>
+                <li><a href="#program"><i class="fas fa-calendar"></i>Programmes</a></li>
             </ul>
         </div>
         <!-- ASIDE NAV BAR ENDS -->
@@ -907,6 +908,7 @@
             </section>
             <!-- CONTACT SECTION ENDS -->
 
+
             <!-- SOCIAL MEDIA STARTS -->
             <section class="social section" id="social">
                 <div class="container">
@@ -990,6 +992,20 @@
                 </div>
             </section>
             <!-- SOCIAL MEDIA STARTS -->
+
+
+            <!-- PROGRAM SECTION STARTS -->
+            <section class="program section" id="program">
+                <div class="container">
+                    <div class="row">
+                        <div class="section-title padd 15">
+                            <h2 class="reveal">Programme de l'année</h2>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- PROGRAM SECTION ENDS -->
+
 
             <!-- FOOTER STARTS -->
             <footer>
