--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <div class="container">
                         <div class="row">
                             <div class="home-info padd-15">
-                                <img src="images/logo.png" class="log" alt="">
+                                <img src="images/gmc4.png" class="log" alt="">
                                 <h3 class="hello reveal">
                                     Bienvenue dans l'univers captivant du GENERAL Makosso Camille alias <br> <span class="name">ROI DE LA MARMAILLE</span>
                                 </h3>
