--- a/index.html
+++ b/index.html
@@ -193,6 +193,31 @@
                                             </div>
                                         </div>
                                         <p class="reveal">
+                                            🛑MES FILLES ET MOI VENONS DE TRÈS LOIN:
+                                            - KYMBERLY « KIMI »M’A FAIT CONNAÎTRE LA JOIE DE DEVENIR PÈRE. 
+                                            - METABELLE « METI » M’A FAIT CONNAÎTRE LA JOIE DE SORTIR DE LA GALÈRE.
+                                            CE SOIR APRES TANT DE SOUFFRANCE ET DE DOULEUR JE SERAI POUR LA PREMIÈRE FOIS SUR UN MEME PLATEAU TÉLÉ 📺 SUR NCI 
+                                            JE SERAI AVEC MES BB EN DIRECT:
+                                            18h30-19h35
+                                            NCI canal 204 sur le bouquet
+                                            No 4 sur la TNT
+                                            NB: CE SOIR NOUS AURONT À FAIRE DE TERRIBLE RÉVÉLATIONS. VEUILLEZ DEMANDER À TOUT LE PEUPLE AFRICAINS BÉNINOIS EN PARTICULIER, CAMEROUNAIS, 
+                                            BURKINABÉS ET IVOIRIENS DE NE MANGER CE RENDEZ VOUS POUR RIEN AU MONDE. <br>
+                                            INVITES DU JOUR SUR NCI, LE GENERAL MAKOSSO CAMILLE ET SES FILLES DEVRONT SE PRESENTER SUR LES PLATEAUX DE LA NOUVELLE
+                                            CHAINE IVOIRIENNE (NCI). 
+                                        </p>
+                                        <img src="images/plateau.jpg" alt="">
+                                        <p class="reveal">
+                                            🛑INFORMATION DE LA HAUTE ACADÉMIE DE LA MARMAILLE: 
+                                            « NOUS INFORMONS LA COMMUNAUTÉ NATIONALE ET INTERNATIONALE QUE CETTE PERSONNE APRÈS VÉRIFICATION DE NOS FICHIERS N’A JAMAIS INTÉGRÉ NOTRE 
+                                            ACADEMIE PRESTIGIEUSE FORMANT LES DIGNES AFRICAINS AUX STRATÉGIES LÉGALES DE MARMAILLE ET DE POSSESSION DES FONDS FINANCIERS.
+                                            DEMANDONS AUX PLUS HAUTE AUTORITÉ DE BIEN VOULOIR OUVRIR UNE ENQUÊTE SUR SES ACTIVITÉS ET DEMANDONS À TOUTES SES VICTIMES DEMAIN MARDI DE SE 
+                                            RENDRE À LA BRIGARDE DE RECHERCHE AU PLATEAU POUR DÉPOSER OFFICIELLEMENT LEUR PLAINTE AVEC LES PREUVES CAR TROP C’EST TROP. »
+                                            LE PRÉSIDENT FONDATEUR DE L’ACADÉMIE 
+                                            LE GL MAKOSSO CAMILLE
+                                        </p>
+                                        <img src="images/sabine.jpg" alt="">
+                                        <p class="reveal">
                                             Le GENERAL CAMILLE MAKOSSO APPORTE SON SOUTIEN A SA SOEUR LOLO BEAUTÉ A TRAVERS CE POST SUR FACEBOOK: <br>
                                             🛑Psaume 23V3 « Il restaure mon âme, Il me conduit dans les sentiers de la justice, A cause de son nom. 
                                             4Quand je marche dans la vallée de l'ombre de la mort, Je ne crains aucun mal, car tu es avec moi: Ta houlette et ton bâton me rassurent. 
@@ -204,7 +229,8 @@
                                         <img src="images/lolo.jpg" class="reveal" alt="">
                                         <p class="reveal">
                                             🛑INFORMATION GÉNÉRAL: 
-                                            « SUITE AUX NOUVELLES PREUVES ET AUDIOS REÇU LE GÉNÉRAL MAKOSSO MEILLEUR INFLUENCEURS DE TOUS LES TEMPS AURA SON DIRECT EXTRAORDINAIRE SUR L’AFFAIRE EMMA LOHOUES AVEC DE NOUVELLES RÉVÉLATIONS EXCLUSIVES. »
+                                            « SUITE AUX NOUVELLES PREUVES ET AUDIOS REÇU LE GÉNÉRAL MAKOSSO MEILLEUR INFLUENCEURS DE TOUS LES TEMPS AURA SON DIRECT EXTRAORDINAIRE SUR L’AFFAIRE EMMA LOHOUES 
+                                            AVEC DE NOUVELLES RÉVÉLATIONS EXCLUSIVES. »
                                             NB: VU LES NOUVELLES PREUVES LE GÉNÉRAL MAKOSSO A DÉCIDÉ DE NE PRENDRE PARTI POUR AUCUN CLAN EN VU D’ÊTRE JUSTE DANS SON DIRECT ET APPORTER SES NOUVELLES PREUVES.
                                             LE DIRECT AURA LIEU À 20H GMT SOIT 21H GABON ET 22H PARIS.
                                             NB: DIRECT INTERDIT À LA EKLAND
@@ -230,13 +256,13 @@
                                                 <p>Age: <span>44 ans</span></p>
                                             </div>
                                             <div class="info-item padd-15">
-                                                <p>Site web: <span>camillemakosso.netlify.app</span></p>
+                                                <p>Site web: <span>generalmakosso.netlify.app</span></p>
                                             </div>
                                             <div class="info-item padd-15">
                                                 <p>Email: <span>miga_international@yahoo.fr</span></p>
                                             </div>
                                             <div class="info-item padd-15">
-                                                <p>Numéro: <span>+33 7 60 15 07 50</span></p>
+                                                <p>Numéro: <span>+33 6 18 14 58 19</span></p>
                                             </div>
                                             <div class="info-item padd-15">
                                                 <p>Ville: <span>Abidjan</span></p>
@@ -386,15 +412,6 @@
                         <div class="galerie-item padd 15 reveal">
                             <div class="galerie-item-inner shadow dark">
                                 <div class="galerie-img">
-                                    <img src="images/soldat.jpg" alt="">
-                                </div>
-                            </div>
-                        </div>
-                        <!-- GALERIE ITEM ENDS -->
-                        <!-- GALERIE ITEM START -->
-                        <div class="galerie-item padd 15 reveal">
-                            <div class="galerie-item-inner shadow dark">
-                                <div class="galerie-img">
                                     <img src="images/sourire.jpg" alt="">
                                 </div>
                             </div>
@@ -441,33 +458,6 @@
                             <div class="galerie-item-inner shadow dark">
                                 <div class="galerie-img">
                                     <img src="images/roidesinfluenceurs.jpg" alt="">
-                                </div>
-                            </div>
-                        </div>
-                        <!-- GALERIE ITEM ENDS -->
-                        <!-- GALERIE ITEM START -->
-                        <div class="galerie-item padd 15 reveal">
-                            <div class="galerie-item-inner shadow dark">
-                                <div class="galerie-img">
-                                    <img src="images/kimketsonpere.jpg" alt="">
-                                </div>
-                            </div>
-                        </div>
-                        <!-- GALERIE ITEM ENDS -->
-                        <!-- GALERIE ITEM START -->
-                        <div class="galerie-item padd 15 reveal">
-                            <div class="galerie-item-inner shadow dark">
-                                <div class="galerie-img">
-                                    <img src="images/lesenfants.jpg" alt="">
-                                </div>
-                            </div>
-                        </div>
-                        <!-- GALERIE ITEM ENDS -->
-                        <!-- GALERIE ITEM START -->
-                        <div class="galerie-item padd 15 reveal">
-                            <div class="galerie-item-inner shadow dark">
-                                <div class="galerie-img">
-                                    <img src="images/makoossoandhiswife.jpg" alt="">
                                 </div>
                             </div>
                         </div>
@@ -777,8 +767,19 @@
                         <div class="galerie-item padd 15 reveal">
                             <div class="galerie-item-inner shadow dark">
                                 <div class="galerie-img">
+                                    <iframe width="100%" height="400px" src="https://www.youtube.com/embed/1QX2t_h0PKw" 
+                                    title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                                    allowfullscreen></iframe>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- GALERIE ITEM ENDS -->
+                        <!-- GALERIE ITEM START -->
+                        <div class="galerie-item padd 15 reveal">
+                            <div class="galerie-item-inner shadow dark">
+                                <div class="galerie-img">
                                     <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@generalmakossocamille1/video/7229372730506792197" 
-                                        data-video-id="7229372730506792197" style="max-width: 605px;min-width: 325px;" > <section> <a target="_blank" 
+                                        data-video-id="7229372730506792197" style="width: 100%;height: 400px;" > <section> <a target="_blank" 
                                         title="@generalmakossocamille1" href="https://www.tiktok.com/@generalmakossocamille1?refer=embed">@generalmakossocamille1</a> <p>🛑 APPELEZ MOI LADY SONIA QUI 
                                         DIT ELLE DEMANDE PARDON ET S’EN FOU DE CEUX QUI REFUSENT SON PARDON</p> <a target="_blank" title="♬ son original - GÉNÉRAL CAMILLE MAKOSSO" 
                                         href="https://www.tiktok.com/music/son-original-7229372820634077957?refer=embed">♬ son original - GÉNÉRAL CAMILLE MAKOSSO</a> </section> 
@@ -793,7 +794,7 @@
                             <div class="galerie-item-inner shadow dark">
                                 <div class="galerie-img">
                                     <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@generalmakossocamille1/video/7228700561972006150" 
-                                        data-video-id="7228700561972006150" style="max-width: 605px;min-width: 325px;" > <section> <a target="_blank" 
+                                        data-video-id="7228700561972006150" style="width: 100%;height: 400px;" > <section> <a target="_blank" 
                                         title="@generalmakossocamille1" href="https://www.tiktok.com/@generalmakossocamille1?refer=embed">@generalmakossocamille1</a> <p>🛑DIEU M’A DONNÉ DE 
                                         MERVEILLEUX ENFANTS ET JE VIS POUR EUX </p> <a target="_blank" title="♬ son original - GÉNÉRAL CAMILLE MAKOSSO" 
                                         href="https://www.tiktok.com/music/son-original-7228700756247857926?refer=embed">♬ son original - GÉNÉRAL CAMILLE MAKOSSO</a> </section> 
@@ -808,7 +809,7 @@
                             <div class="galerie-item-inner shadow dark">
                                 <div class="galerie-img">
                                     <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@generalmakossocamille1/video/7228327601012477190" 
-                                        data-video-id="7228327601012477190" style="max-width: 605px;min-width: 325px;" > <section> <a target="_blank" 
+                                        data-video-id="7228327601012477190" style="width: 100%;height: 400px;" > <section> <a target="_blank" 
                                         title="@generalmakossocamille1" href="https://www.tiktok.com/@generalmakossocamille1?refer=embed">@generalmakossocamille1</a> <p>🛑INCROYABLE MAIS VRAI: 
                                         « EN MOINS DE 24H DÉJÀ PLUS DE 1.577 TEMOIGNAGE APRÈS A AVOIR SUIVIT CETTE PRIÈRE PROPHÉTIQUE »</p> <a target="_blank" title="♬ son original - GÉNÉRAL CAMILLE MAKOSSO" 
                                         href="https://www.tiktok.com/music/son-original-7228327705221745414?refer=embed">♬ son original - GÉNÉRAL CAMILLE MAKOSSO</a> </section> 
@@ -839,14 +840,14 @@
                         <div class="contact-info-item padd-15">
                             <div class="icon reveal"><i class="fa fa-phone"></i></div>
                             <h4 class="reveal">Appelez-nous Au</h4>
-                            <p class="reveal">+225 0709509359</p>
+                            <p class="reveal">+225 07 49 96 19 53</p>
                         </div>
                         <!-- CONTACT INFO ITEM ENDS -->
                         <!-- CONTACT INFO ITEM STARTS -->
                         <div class="contact-info-item padd-15">
                             <div class="icon reveal"><i class="fas fa-desktop"></i></div>
                             <h4 class="reveal">Bureau</h4>
-                            <p class="reveal">Chez moi à la maison</p>
+                            <p class="reveal">Angré Djibi, à côté du Lavage Auto-plus</p>
                         </div>
                         <!-- CONTACT INFO ITEM ENDS -->
                         <!-- CONTACT INFO ITEM STARTS -->
@@ -860,7 +861,7 @@
                         <div class="contact-info-item padd-15 reveal">
                             <div class="icon"><i class="fas fa-globe-europe"></i></div>
                             <h4>Site Internet</h4>
-                            <p>camillemakosso.netlify.app</p>
+                            <p>generalmakosso.netlify.app</p>
                         </div>
                         <!-- CONTACT INFO ITEM ENDS -->
                     </div>
@@ -1009,7 +1010,7 @@
 
             <!-- FOOTER STARTS -->
             <footer>
-                <p>2023 &copy; COPYRIGHTS CAMILLEMAKOSSO.NETLIFY.APP - TOUS DROITS RESERVES</p>
+                <p>2023 &copy; COPYRIGHTS GENERALMAKOSSO.NETLIFY.APP - TOUS DROITS RESERVES</p>
             </footer>
             <!-- FOOTER ENDS -->
         </div>
